<resources>
    <string name="app_name">QuizAppMath</string>
    <string name="title">Lets take a math quiz!</string>
    <string name="question1">1) 1 + 6 (9 * 0) + 2 =</string>
    <string name="answer1">8</string>
    <string name="notAnswer1">2</string>
    <string name="questionTwo">2) 6 + 4 * 3 \- 10 \- 5 =</string>
    <string name="notAnswer2">4</string>
    <string name="answer2">16</string>
    <string name="notAnswer3">5</string>
    <string name="question3">3) Which of these is true?</string>
    <string name="notAnswer4">55 * 7 = 3875</string>
    <string name="answer3">75 * 10 + 12 / 6 = 752</string>
    <string name="notAnswer5">65 * 12 + 20 = 675</string>
    <string name="answer4">10 * 10 * 0 = 0</string>
    <string name="question4">4) Jimmy has 3 apples, 10 carrots, 7 watermelon, 4 cucumber, 3 pears, and 8 cherries. Jimmy gives 2 watermelon a pear, 1 cucumber and 4 cherries to Cathrine, how many fruits does he have left?</string>
    <string name="submitAnswers">Submit Answers</string>
    <string name="editTextHint">It\'s not 32</string>
</resources>
